mule-user-guide/v/3.5/creating-and-managing-a-cluster-manually.adoc
= Creating and Managing a Cluster Manually

_*Enterprise Edition*_

There are two ways to create and manage clusters:

* Using the Management Console's graphical interface
* Manually, using a configuration file

This page describes manual creation and configuration of a cluster. If you want to create and manage a cluster using the Management Console's graphical interface, see link:/mule-management-console/v/3.7/creating-or-disbanding-a-cluster[Creating or Disbanding a Cluster].

[CAUTION]
*Do not attempt mixed management of clusters* +
 +
If you create a cluster manually, do not attempt to manage it via the Management Console. The Management Console cannot recognize your manually-created cluster, and overwrites your cluster configuration.

[NOTE]
All nodes in a cluster must have the same agent version.

== Creating a Cluster Manually

Follow this procedure to create a cluster manually, using a configuration file.

. Ensure that the node is not running, i.e. Mule ESB Server is stopped.
. Create a file named `mule-cluster.properties` inside the node's `$MULE_HOME/.mule` directory.
. Edit the file with parameter = value pairs, one per line. See the example below.
+
[source, code, linenums]
----
...
mule.cluster.nodes=192.168.10.21,192.168.10.22,192.168.10.23
mule.cluster.multicastenabled=false
...
----

. Repeat this procedure for all Mule servers that you want to be in the cluster.
. Start the Mule servers in the nodes.

For the full list of available parameters, see <<Cluster Configuration Parameters>>.

== Managing a Cluster Manually

Manual management of a cluster is only possible for clusters that have been manually created, which are not managed by the Mule Management Console.

To manually change the configuration of a cluster node, follow these steps:

. Stop the node's Mule ESB server.
. Edit the node's `mule-cluster.properties` as desired, then save the file.
. Restart the node's Mule ESB server.

[CAUTION]
*Ensure consistency across nodes* +
 +
Ensure that the options you apply in the configuration file are valid for all cluster nodes. Failure to do so can cause you to  break the cluster configuration and inadvertently disable the cluster.


== Cluster Configuration Parameters

The following table lists the parameters of the `mule-cluster.properties` file.

[width="100%",cols="50%,50%",options="header",]
|===
|Property name |Description
a|`mule.clusterId`
|*Mandatory.* Unique identifier for the cluster. It can be any alphanumeric string.
a|`mule.clusterNodeId`
|*Mandatory.* Unique ID of the node within the cluster. It can be any integer between 1 and the number of nodes in the cluster.
|`mule.cluster.networkinterfaces` a|
Comma-separated list of interfaces to use by Hazelcast. Wildcards are supported, as shown below. +
[source, code, linenums]
----
192.168.1.*,192.168.100.25
----
|`mule.cluster.nodes` a|The nodes that belong to the cluster, in the form `<host:port>`, for example, `172.16.9.24:9000`. Specifying just one IP address enables the server to join the cluster.

The port number is optional; if not set, the default is 5701. To include more than one host, create a comma-separated list.

This option configures the cluster with the specified fixed IP addresses. Use this option if you are not relying on multicast for cluster node discovery. If using this option, set `mule.cluster.multicastenabled` to `false` (see next item in this table).

Examples:

Two nodes listening on port 9000:

[source, code, linenums]
----
172.16.9.24:9000,172.16.9.51:9000
----

Two nodes listening on port 5701:

[source, code, linenums]
----
192.168.1.19,192.168.1.20
----

|`mule.cluster.multicastenabled` |*(Boolean)* Enable/disable multicast. Set to `false` if using fixed IP addresses for cluster node discovery (see option `mule.cluster.nodes` above).
|`mule.cluster.multicastgroup` |Multicast group IP address to use.
|`mule.cluster.multicastport` |Multicast port number to use.
|===

== See Also

* Learn about http://www.mulesoft.org/documentation/display/current/Deploying%2C+Redeploying%2C+or+Undeploying+an+Application+To+or+From+a+Cluster[deploying] and http://www.mulesoft.org/documentation/display/current/Monitoring+a+Cluster[monitoring] clusters.
